# Series-Lookup

./: .gitignore  Pipfile  README.md  app.py  check_upd.py  check_updates.py  config.py  get_updates.py  main.py  pyproject.toml  requirements.txt  updates.py
app/: database.py
old/: app.py  updates.py
series_lookup/: app.py  config.py  controller.py  database.py  exceptions.py  queries.py  updates.py
