[tool.poetry]
name = "series-lookup"
version = "0.1.0"
description = "Get toast notifications if your locally saved shows have a new season."
authors = ["Dhruv <dhruvahuja2k@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tmdbv3api = "1.7.6"
rich = "10.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
