[tool.poetry]
name = "series-lookup"
version = "0.1.0"
description = "Get toast notifications if your locally saved shows have a new season."
authors = ["Dhruv <dhruvahuja2k@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tmdbv3api = "1.7.6"
rich = "10.10.0"
python-dotenv = "^0.19.2"
notify-py = "^0.3.3"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
